# Group18-ROS2-FollowBot-Harshy

./: README.md
harshy_bot/harshy/: CMakeLists.txt  package.xml
harshy_bot/harshy_follow/: CMakeLists.txt  package.xml
harshy_bot/harshy_follow/src/: harshy_follow.py
harshy_bot/harshy_gazebo/: CMakeLists.txt  package.xml
harshy_bot/harshy_gazebo/env-hooks/: harshy_gazebo.sh.in
harshy_bot/harshy_gazebo/launch/: harshy.launch.py
harshy_bot/harshy_gazebo/models/harshy/: model.config  model.sdf
harshy_bot/harshy_gazebo/models/harshy/materials/scripts/: script.material
harshy_bot/harshy_gazebo/rviz/: harshy_gazebo.rviz
harshy_bot/harshy_gazebo/worlds/: harshy_city.world  harshy_empty.world
